# calibrate

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docs-plan.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements-docs.txt
.cursor/: hooks.json
.cursor/hooks/: update-context.js
.cursor/rules/: app-details.md
.github/workflows/: docs.yml  publish.yml
.specstory/history/: 2026-01-06_16-41Z-stt-component-cli-evaluation.md  2026-01-06_16-55Z-agentloop-library-packaging-and-cli.md  2026-01-06_17-22Z-messages-map-typeerror.md  2026-01-06_17-45Z-open-source-markdown-documentation-options.md  2026-01-07_07-11Z-centralized-dotenv-loading.md  2026-01-12_07-13Z-openrouter-default-provider-issue.md  2026-01-12_16-52Z-llm-parallel-simulation-execution.md  2026-01-14_09-21Z-persona-simulation-updates.md  2026-01-14_10-27Z-pense-stt-examples,-eval,-readme-synchronization.md  2026-01-14_10-31Z-readme-md-conversation-wav-documentation.md  2026-01-15_03-29Z-simulation-stt-tts-configuration-handling.md  2026-01-15_19-07Z-llm-conversational-question-planning.md  2026-01-15_20-16Z-parallel-simulation-execution.md  2026-01-16_11-54Z-agent-speaks-first-parameter-documentation.md  2026-01-18_08-20Z-cartesia-second-audio-transcript-issue.md  2026-01-18_09-22Z-pense-simulation-bot-audio-cut-off.md  2026-01-18_10-28Z-simulation-audio-chunk-file-naming.md  2026-01-18_14-17Z-nltk-punkt-tab-resource-download-failure.md  2026-01-19_14-46Z-intermediate-test-output-storage.md  2026-01-19_16-01Z-agent-simulation-transcript-and-audio-handling.md  2026-01-19_16-21Z-fish-mention.md  2026-01-20_04-00Z-audio-processing-completion-bug.md  2026-01-20_04-08Z-stt-run-transcript-issue.md  2026-01-21_04-49Z-python-library-module-support.md  2026-01-22_19-19Z-pipecat-like-tab-structure.md  2026-01-22_19-56Z-stt-docs-usage-section-replacement.md  2026-01-23_03-35Z-cli-documentation-update.md  2026-01-23_08-02Z-stt-eval-py-pipecat-removal-and-simplification.md  2026-01-23_10-49Z-metrics-json-dictionary-format-in-eval-py.md  2026-01-23_10-52Z-ground-truth-transcript-duplication-after-retry.md  2026-01-24_09-08Z-function-for-tts-output.md  (+23 more)
agentloop/: __init__.py  cli.py
calibrate/: __init__.py  cli.py  langfuse.py  status.py  utils.py
docs/: README.md  docs.json  faq.md  index.md  index.mdx
out_1/: metrics.json
out_2/: results.csv
pense/: __init__.py  badlogs  cli.py  goodlogs  utils.py
ui/: package-lock.json  package.json  tsconfig.json
(+299 files in other folders)
