[project]
name = "pense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backoff>=2.2.1",
    "evaluate>=0.4.6",
    "instructor>=1.13.0",
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "jiwer>=4.0.0",
    "matplotlib>=3.10.7",
    "natsort>=8.4.0",
    "onnxruntime>=1.23.2",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pipecat-ai-small-webrtc-prebuilt>=1.0.0",
    "pipecat-ai[cartesia,deepgram,google,groq,local-smart-turn-v3,openrouter,tracing,webrtc,websocket]>=0.0.93",
    "python-dotenv>=1.2.1",
    "sarvamai>=0.1.21",
    "simpleaudio>=1.0.4",
    "smallestai>=4.0.1",
    "sounddevice>=0.5.3",
    "test-py>=0.3",
    "uvicorn>=0.38.0",
    "whisper-normalizer>=0.1.12",
]

[project.scripts]
pense = "pense.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
